--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+    :root {
+        --header-height: 97px;
+    }
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    body {
+        font-family: 'Roboto', sans-serif;
+    }
+
+    /* Grid */
+    .cols-4 {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+    .cols-5 {
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+    }
+    .cols-6 {
+        grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+}
