--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 
     body {
         font-family: 'Roboto', sans-serif;
+        overflow-y: overlay;
     }
 
     /* Grid */
@@ -28,5 +29,21 @@
     }
     .cols-6 {
         grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+
+    /* Scrollbar CSS */
+    html *::-webkit-scrollbar {
+        border-radius: 0;
+        width: 8px;
+    }
+
+    html *::-webkit-scrollbar-thumb {
+        border-radius: 4px;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    html *::-webkit-scrollbar-track {
+        border-radius: 0;
+        background-color: rgba(255, 255, 255, 0.4);
     }
 }
